# pos-adapter-base

./: .bazelproject  .gitattributes  .gitignore  BUILD.bazel  Makefile  README.md  WORKSPACE  defs.bzl  package.json  skaffold.yaml  sonar-project.properties  tsconfig.json
.devcontainer/: Dockerfile  Dockerfile.gitpod  container.bazel.rc  devcontainer.json
.github/: CODEOWNERS  SECURITY_CONTACTS  buildkite.yml  codecov.yml
.github/tpl/: README.md
.hooks/: pre-commit
.k8s/: README.md
.k8s/policy/prod/: apps_v1_deployment_sample.yaml  cert-manager.io_v1_certificate_cas-echo-private-r1.yaml  ~g_v1_service_sample.yaml
.k8s/policy/sandbox/: apps_v1_deployment_sample.yaml  cert-manager.io_v1_certificate_cas-echo-private-r1.yaml  ~g_v1_service_sample-ext.yaml  ~g_v1_service_sample.yaml
.k8s/policy/staging/: apps_v1_deployment_sample.yaml  cert-manager.io_v1_certificate_cas-echo-private-r1.yaml  ~g_v1_service_sample.yaml
adapter/: BUILD.bazel  README.md  adapter.proto  config.proto
adapter/base/: BUILD.bazel  README.md  RetailAdapter.kt  RetailAdapterBase.kt  RetailAdapterConfig.kt  RetailAdapterImpl.kt
adapter/cli/: AdapterTool.kt  BUILD.bazel  README.md
app/: BUILD.bazel
app/backend/: BUILD.bazel  README.md  index.ts  runner.ts  server.ts
app/config/: BUILD.bazel  server.json
app/config/tls/: BUILD.bazel  gen.sh  selfsigned-ca.conf  selfsigned-ca.crt  selfsigned-ca.srl  selfsigned.conf  selfsigned.crt  selfsigned.csr  selfsigned.ext
app/frontend/: README.md
infra/: README.md  kustomization.yaml
infra/devops/: README.md  adapter.build.yml  frontend.build.yml
infra/gcp/: sample.yaml
infra/k8s/: BUILD.bazel  cert.yaml  istio.yaml  server.yaml  service.yaml
infra/overlays/prod/: app.yaml  cert.yaml
infra/overlays/sandbox/: app.yaml  cert.yaml  kustomization.yaml  service-ext.yaml
infra/overlays/staging/: app.yaml  cert.yaml  kustomization.yaml
tests/: README.md
tools/: Setup.mak  Tools.mak  base.bazel.rc  defs.bzl  requirements.txt  sources.py
tools/config/: app.bzl
