load("@io_bazel_rules_docker//container:push.bzl", "container_push")
load("@io_bazel_rules_docker//nodejs:image.bzl", "nodejs_image")

package(
    default_visibility = ["//visibility:public"],
)

nodejs_image(
    name = "image",
    data = [
        "//app/backend:bundle.js",
    ],
    entry_point = "@app//app/backend:bundle.js",
)

container_push(
    name = "image.push",
    format = "OCI",
    image = ":image",
    registry = "{DOCKER_REGISTRY}",
    repository = "{DOCKER_REPOSITORY}",
    tag = "{DOCKER_TAG}",
)

alias(
    name = "app",
    actual = "image",
)
