package(
    default_visibility = ["//visibility:public"],
)

load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_binary", "kt_jvm_library")
load("@rules_graal//graal:graal.bzl", "graal_binary")


TOOL_CLASS = "adapter.cli.AdapterTool"
TOOL_DEPS = [
    "//adapter/base",
    "@maven//:info_picocli_picocli",
]


kt_jvm_library(
    name = "AdapterTool",
    deps = TOOL_DEPS,
    srcs = glob([
        "*.kt",
    ]),
)


kt_jvm_binary(
    name = "jvm",
    main_class = TOOL_CLASS,
    runtime_deps = [":AdapterTool"],
)

graal_binary(
    name = "native",
    deps = TOOL_DEPS + [":AdapterTool"],
    main_class = TOOL_CLASS,
    graal_extra_args = [
        "-H:-CheckToolchain",
    ],
)


alias(
    name = "cli",
    actual = "jvm",
)
