load("@npm//@bazel/esbuild:index.bzl", "esbuild")
load("@npm//@bazel/typescript:index.bzl", "ts_project", "ts_library")
load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")

package(
    default_visibility = ["//visibility:public"],
)


# Target `app`: TypeScript project.
ts_library(
    name = "app",
    tsconfig = "//:tsconfig",
    srcs = [
        "index.ts",
        "server.ts",
        "runner.ts",
    ],
    deps = [
        "@npm//@types/node",
    ],
)

# Target `bundle`: ESBuild bundle of TypeScript outputs.
esbuild(
    name = "bundle",
    entry_point = ":runner.ts",
    minify = True,
    platform = "node",
    deps = [
        ":app",
    ],
)

# Target `bin`: Node entrypoint.
nodejs_binary(
    name = "bin",
    entry_point = ":bundle.js",
    data = [
        ":bundle",
        "//app/config"
    ],
    tags = [
        "ibazel_notify_changes",
    ],
)

alias(
    name = "backend",
    actual = "app",
)
