
load("@io_bazel_rules_k8s//k8s:object.bzl", "k8s_object")
load("@io_bazel_rules_k8s//k8s:objects.bzl", "k8s_objects")

package(
    default_visibility = ["//visibility:public"],
)


exports_files([
    "cert.yaml",
    "sa.yaml",
    "server.yaml",
    "service.yaml",
])


K8S_VARIABLES = {
  "%{app_version}": "{VERSION}",
  "%{server_revision}": "{STABLE_DOCKER_TAG}",
}


k8s_object(
  name = "cert",
  template = ":cert.yaml",
)

k8s_object(
  name = "service-account",
  template = ":sa.yaml",
)

k8s_object(
  name = "server",
  kind = "deployment",
  template = ":server.yaml",
  substitutions = K8S_VARIABLES,
  images = {
    "us.gcr.io/cookies-co/dev/sample-app/node": "//app:image"
  },
)

k8s_object(
  name = "service",
  template = ":service.yaml",
  substitutions = K8S_VARIABLES,
)


k8s_objects(
  name = "k8s",
  objects = [
    ":cert",
    ":service-account",
    ":server",
    ":service",
  ],
)
